cmake_minimum_required(VERSION 3.19)
project(source C)

set(CMAKE_C_STANDARD 99)

add_executable(variables keyword_1/variables.c)
add_executable(main main.c)
add_executable(condition keyword_1/condition.c)
add_executable(switch keyword_1/switch.c)
add_executable(pointer1 keyword_3/pointer1.c)
add_executable(array1 keyword_2/array1.c)
add_executable(array2 keyword_2/array2.c)
add_executable(array_pointer keyword_3/array_pointer.c)
add_executable(array_2d_pointer keyword_3/array_2d_pointer.c)
add_executable(array_pointer_2 keyword_3/array_pointer_2.c)